@@ -1,8 +1,9 @@
 git-annex (8.20210224) UNRELEASED; urgency=medium
 
+  * unregisterurl: New command.
+  * registerurl: Allow it to be used in a bare repository.
   * Windows: Correct the path to the html help file for 64 bit build.
   * uninit: Fix a small bug that left a lock file in .git/annex
-  * registerurl: Allow it to be used in a bare repository.
 
  -- Joey Hess <id@joeyh.name>  Wed, 24 Feb 2021 13:18:38 -0400
 
